--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
     <title>Star Wars Search</title>
   </head>
   <body>
+    <audio autoplay="autoplay">
+          <source src="./theme_song.m4a" type="audio/mp4">
+          Your browser does not support the audio element.
+    </audio>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
