--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>Star Wars Search</title>
   </head>
   <body>
-    <audio autoplay="autoplay">
+    <audio autoplay="autoplay loop">
           <source src="./theme_song.m4a" type="audio/mp4">
           Your browser does not support the audio element.
     </audio>
